[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/ModPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/panels/1,1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/inventory/item_frame.png" type="Texture" id=4]



[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 590, 51 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 590, 51 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -659.0
margin_bottom = -277.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1236.0
margin_bottom = 778.0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 559.0
margin_bottom = 753.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer2"]
margin_right = 559.0
margin_bottom = 753.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="ScrollContainer2" type="ItemList" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 529.0
margin_bottom = 723.0
custom_styles/selected_focus = SubResource( 6 )
custom_styles/bg_focus = SubResource( 4 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 563.0
margin_right = 647.0
margin_bottom = 753.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 84.0
margin_bottom = 290.251
text = "<"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 84.0
margin_bottom = 332.251
text = ">"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 84.0
margin_bottom = 374.251
text = "Up"

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 84.8375
margin_bottom = 416.251
text = "Down"

[node name="Button5" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 84.0
margin_bottom = 458.251
text = "Ok"

[node name="Button6" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 462.0
margin_right = 84.0
margin_bottom = 500.251
text = "Close"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 651.0
margin_right = 1211.0
margin_bottom = 753.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
margin_right = 560.0
margin_bottom = 753.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="ScrollContainer2" type="ItemList" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 530.0
margin_bottom = 723.0
custom_styles/selected_focus = SubResource( 6 )
custom_styles/bg_focus = SubResource( 4 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 2 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 261.39
margin_top = 204.0
margin_right = 1020.39
margin_bottom = 356.0
window_title = "Restart game"
dialog_text = "Changes saved. 
Restart game to reload content of selected mods."

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="add_mod"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="remove_mod"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button3" to="." method="m_up"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button4" to="." method="m_down"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button5" to="." method="on_ok"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button6" to="." method="on_cancel"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
